docs(landing): remove tweet for which author haven't answered

--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,8 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.12.4",
+    "@quasar/extras": "^1.13.0",
+    "core-js": "^3.20.3",
     "prismjs": "^1.26.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
