--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -52,35 +52,35 @@
     "@types/cordova": "0.0.34",
     "@types/express": "^4.17.13",
     "@vitejs/plugin-vue": "^2.2.0",
-    "archiver": "5.3.0",
-    "chokidar": "3.5.3",
-    "ci-info": "3.3.0",
+    "archiver": "^5.3.0",
+    "chokidar": "^3.5.3",
+    "ci-info": "^3.3.0",
     "compression": "^1.7.4",
-    "cross-spawn": "7.0.3",
+    "cross-spawn": "^7.0.3",
     "dot-prop": "6.0.1",
     "elementtree": "0.1.7",
-    "esbuild": "0.14.24",
+    "esbuild": "0.14.27",
     "express": "^4.17.3",
     "fast-glob": "3.2.11",
-    "fs-extra": "10.0.1",
-    "html-minifier": "4.0.0",
-    "inquirer": "8.2.0",
-    "isbinaryfile": "4.0.8",
-    "kolorist": "1.5.1",
-    "lodash.debounce": "4.0.8",
-    "lodash.template": "4.5.0",
-    "minimist": "1.2.6",
-    "open": "8.4.0",
-    "ouch": "2.0.0",
+    "fs-extra": "^10.0.1",
+    "html-minifier": "^4.0.0",
+    "inquirer": "^8.2.1",
+    "isbinaryfile": "^4.0.8",
+    "kolorist": "^1.5.1",
+    "lodash.debounce": "^4.0.8",
+    "lodash.template": "^4.5.0",
+    "minimist": "^1.2.6",
+    "open": "^8.4.0",
+    "ouch": "^2.0.0",
     "postcss": "^8.4.4",
-    "register-service-worker": "1.7.2",
+    "register-service-worker": "^1.7.2",
     "rollup-plugin-visualizer": "^5.5.4",
     "sass": "1.32.12",
-    "semver": "7.3.5",
+    "semver": "^7.3.5",
     "serialize-javascript": "^6.0.0",
-    "table": "6.8.0",
+    "table": "^6.8.0",
     "vite": "2.8.6",
-    "webpack-merge": "5.8.0"
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
     "electron-builder": "22.14.13",
