feat(cli): upgrade deps

--- a/cli/package.json
+++ b/cli/package.json
@@ -43,33 +43,33 @@
     "yarn": ">= 1.6.0"
   },
   "dependencies": {
-    "async": "3.2.3",
-    "kolorist": "1.5.1",
-    "ci-info": "3.3.0",
-    "compression": "1.7.4",
-    "connect-history-api-fallback": "1.6.0",
+    "async": "^3.2.3",
+    "kolorist": "^1.5.1",
+    "ci-info": "^3.3.0",
+    "compression": "^1.7.4",
+    "connect-history-api-fallback": "^1.6.0",
     "consolidate": "0.16.0",
-    "cors": "2.8.5",
-    "cross-spawn": "7.0.3",
-    "download-git-repo": "3.0.2",
-    "express": "4.17.3",
-    "fs-extra": "9.0.1",
-    "handlebars": "4.7.7",
-    "http-proxy-middleware": "2.0.3",
-    "inquirer": "8.2.0",
-    "metalsmith": "2.4.2",
-    "minimatch": "3.0.4",
-    "minimist": "1.2.6",
-    "multimatch": "5.0.0",
+    "cors": "^2.8.5",
+    "cross-spawn": "^7.0.3",
+    "download-git-repo": "^3.0.2",
+    "express": "^4.17.3",
+    "fs-extra": "^10.0.0",
+    "handlebars": "^4.7.7",
+    "http-proxy-middleware": "^2.0.3",
+    "inquirer": "^8.2.0",
+    "metalsmith": "^2.4.2",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.6",
+    "multimatch": "^5.0.0",
     "open": "7.0.4",
     "ora": "5.4.0",
-    "read-metadata": "1.0.0",
-    "rimraf": "3.0.2",
+    "read-metadata": "^1.0.0",
+    "rimraf": "^3.0.2",
     "route-cache": "0.4.7",
     "selfsigned": "1.10.11",
-    "tildify": "2.0.0",
-    "update-notifier": "5.1.0",
-    "validate-npm-package-name": "3.0.0"
+    "tildify": "^2.0.0",
+    "update-notifier": "^5.1.0",
+    "validate-npm-package-name": "^3.0.0"
   },
   "publishConfig": {
     "access": "public"
