--- a/cli/package.json
+++ b/cli/package.json
@@ -44,7 +44,6 @@
   },
   "dependencies": {
     "async": "^3.2.3",
-    "kolorist": "^1.5.1",
     "ci-info": "^3.3.0",
     "compression": "^1.7.4",
     "connect-history-api-fallback": "^1.6.0",
@@ -57,6 +56,7 @@
     "handlebars": "^4.7.7",
     "http-proxy-middleware": "^2.0.3",
     "inquirer": "^8.2.0",
+    "kolorist": "^1.5.1",
     "metalsmith": "^2.4.2",
     "minimatch": "^3.0.4",
     "minimist": "^1.2.6",
@@ -66,10 +66,13 @@
     "read-metadata": "^1.0.0",
     "rimraf": "^3.0.2",
     "route-cache": "0.4.7",
-    "selfsigned": "1.10.11",
+    "selfsigned": "^2.0.0",
     "tildify": "^2.0.0",
     "update-notifier": "^5.1.0",
     "validate-npm-package-name": "^3.0.0"
+  },
+  "resolutions": {
+    "minimist": "^1.2.6"
   },
   "publishConfig": {
     "access": "public"
