refactr(app-vite): Convert 'sub-bin' files to regular JS files, enable linting on them https://github.com/mysticatea/eslint-plugin-node/blob/v11.1.0/docs/rules/shebang.md

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -43,7 +43,7 @@
     "url": "https://donate.quasar.dev"
   },
   "scripts": {
-    "lint": "eslint --ext .js ./ --fix --report-unused-disable-directives"
+    "lint": "eslint --ext .js ./ ./bin/quasar --fix --report-unused-disable-directives"
   },
   "dependencies": {
     "@quasar/fastclick": "1.1.5",
