--- a/create-quasar/templates/app/quasar-v2/ts-webpack/BASE/package.json
+++ b/create-quasar/templates/app/quasar-v2/ts-webpack/BASE/package.json
@@ -25,15 +25,14 @@
   },
   "devDependencies": {
     <% if (preset.lint) { %>
-    "vue-tsc": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
     <% if (lintConfig === 'standard') { %>
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-promise": "^6.0.0",
     <% } else if (lintConfig === 'airbnb') { %>
     "eslint-config-airbnb-base": "^15.0.0",
