feat(app-webpack): linting

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -14,6 +14,9 @@
     "types",
     "tsconfig-preset.json"
   ],
+  "scripts": {
+    "lint": "eslint --ext .js ./ ./bin/quasar --fix --report-unused-disable-directives"
+  },
   "keywords": [
     "quasar",
     "vue",
@@ -111,6 +114,8 @@
   "devDependencies": {
     "electron-builder": "22.14.13",
     "electron-packager": "^15.3.0",
+    "eslint": "^8.11.0",
+    "eslint-plugin-node": "^11.1.0",
     "pinia": "^2.0.0",
     "quasar": "^2.0.4",
     "ts-essentials": "^9.1.2",
