--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -78,6 +78,7 @@
     "inquirer": "8.2.1",
     "isbinaryfile": "4.0.8",
     "launch-editor-middleware": "2.3.0",
+    "loader-utils": "^2.0.0",
     "lodash.debounce": "4.0.8",
     "lodash.template": "4.5.0",
     "lodash.throttle": "4.1.1",
