feat(create-quasar): linting updates #12872 #12939

--- a/app-webpack/package.json
+++ b/app-webpack/package.json
@@ -116,7 +116,7 @@
     "electron-builder": "22.14.13",
     "electron-packager": "^15.3.0",
     "eslint": "^8.11.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^14.0.0",
     "pinia": "^2.0.0",
     "quasar": "^2.0.4",
     "ts-essentials": "^9.1.2",
