--- a/docs/package.json
+++ b/docs/package.json
@@ -23,11 +23,12 @@
     "@quasar/app-vite": "^1.0.0-beta.5",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "^17.0.0-1",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-n": "^14.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-quasar": "^1.1.0",
     "gray-matter": "^4.0.2",
     "markdown-ast": "^0.2.1",
     "markdown-it": "^12.3.2",
