fix(create-quasar/ts-vite): Remove invalid tsconfig references

--- a/create-quasar/templates/app/quasar-v2/ts-vite/BASE/_tsconfig.json
+++ b/create-quasar/templates/app/quasar-v2/ts-vite/BASE/_tsconfig.json
@@ -15,6 +15,5 @@
     "experimentalDecorators": true,
     "useDefineForClassFields": true<% } %>
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
