--- a/app-webpack/tsconfig-preset.json
+++ b/app-webpack/tsconfig-preset.json
@@ -1,11 +1,11 @@
 {
+  // `baseUrl` must be placed on the extending configuration in devland, or paths won't be recognized
   "compilerOptions": {
     "allowJs": true,
-    // `baseUrl` must be placed on the extending configuration in devland, or paths won't be recognized
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
-    // Needed to address https://github.com/quasarframework/app-extension-typescript/issues/36
+    // Address https://github.com/quasarframework/app-extension-typescript/issues/36
     "noEmit": true,
     "resolveJsonModule": true,
     // Avoid cross-os errors due to inconsistent file casing
@@ -13,6 +13,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es6",
+    // Fix Volar issue https://github.com/johnsoncodehk/volar/issues/1153
+    "jsx": "preserve",
     // Quasar-defined webpack aliases
     "paths": {
       "src/*": ["src/*"],
@@ -25,7 +27,7 @@
       "stores/*": ["src/stores/*"]
     },
   },
-  // Needed to avoid files copied into 'dist' folder (eg. a `.d.ts` file inside `src-ssr` folder)
+  // Avoid files copied into 'dist' folder (eg. a `.d.ts` file inside `src-ssr` folder)
   // to be evaluated by TS when their original files has been updated
   "exclude": ["/dist", ".quasar", "node_modules"]
 }
