--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -46,11 +46,10 @@
     "lint": "eslint --ext .js ./ ./bin/quasar --fix --report-unused-disable-directives"
   },
   "dependencies": {
+    "@quasar/app-shared": "../utils/app-shared/",
     "@quasar/fastclick": "1.1.5",
     "@quasar/vite-plugin": "^1.0.9",
     "@rollup/pluginutils": "^4.1.2",
-    "@types/cordova": "0.0.34",
-    "@types/express": "^4.17.13",
     "@vitejs/plugin-vue": "^2.2.0",
     "archiver": "^5.3.0",
     "chokidar": "^3.5.3",
@@ -89,7 +88,6 @@
     "eslint-plugin-n": "^14.0.0",
     "pinia": "^2.0.0",
     "quasar": "^2.0.4",
-    "ts-essentials": "^9.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.0"
