chore: Add Project Creation(create-quasar) area to the issue form

--- a/.github/ISSUE_TEMPLATE/bug-report--quasar-v2.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report--quasar-v2.yml
@@ -83,6 +83,7 @@ body:
         - Composables (quasar)
         - Style & Identity (quasar)
 
+        - Project Creation (create-quasar)
         - Quasar Extras (@quasar/extras)
         - TypeScript Support
         - App Extension API
