chore: REmoved v12 of Node for Cypress testing

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node_version: [12, 14, 16]
+        node_version: [14, 16]
       fail-fast: false
 
     name: 'Running Cypress tests on Node v${{ matrix.node_version }}'
