chore: Letting all tests finish not minding the outcome

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   Tests:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
 
     name: 'Running Cypress tests'
     steps:
