--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -30,3 +30,9 @@ jobs:
       
       - name: Run tests
         run: cd ./ui && npm run test:component:ci
+      
+      - name: Output testing summary
+        run: |           
+            '### Hello world! :rocket:\\'
+            'Testing ${{ github.event.issue.user.login }}'
+            >> $GITHUB_STEP_SUMMARY 
