chore: Changing command for Cypress action running

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Run tests
         uses: cypress-io/github-action@v2
         with:
-          command: cd ./ui && npm run test:component:ci
+          command: npm run test:component:ci
