chore: Added if clause to upload artifact action

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -34,6 +34,7 @@ jobs:
       
       - name: Upload screenshots
         uses: actions/upload-artifact@v3
+        if: failure()
         with:
             name: cypress-snapshots
             path: ./ui/test/cypress/screenshots
