chore: Fixed pull_request type triggers

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -3,7 +3,8 @@ name: UI Tests
 on:
   pull_request:
     types:
-      - opened, edited
+      - opened
+      - edited
     branches:    
       - 'dev'
       - 'AutomatingTests'
