--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -44,7 +44,7 @@ jobs:
         run: cd ./ui && npm i
       
       - name: Run tests
-        run: cd ./ui && npm run test:component:ci
+        run: cd ./ui/dev && cypress run-ct --record --key ${{ secrets.CYPRESS_RECORD_KEY }} && cd ..
       
       - name: Add workflow summary
         run: echo "$INTRO" >> $GITHUB_STEP_SUMMARY
