--- a/docs/package.json
+++ b/docs/package.json
@@ -23,7 +23,7 @@
     "@quasar/app-vite": "^1.0.0-beta.9",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
-    "eslint-config-standard": "^17.0.0-1",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.1.0",
     "eslint-plugin-promise": "^6.0.0",
