test: Connected CY dashboard to runs

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -11,17 +11,6 @@ on:
 jobs:
   tests:      
     runs-on: ubuntu-latest
-    env:
-      SUMMARY: |
-        Hi @${{ github.event.pull_request.user.login }} and thanks for the contribution! 👏
-
-        We've detected file changes inside the `ui` folder, so that triggered our Cypress component tests.
-
-      SUCCESS: |
-        :white_check_mark: Seems like all the tests passed successfully, so your PR is ready to be reviewed!
-
-      FAILURE: |
-        :bangbang: Seems like some of the tests are failing. Please amend 'em for someone from the team to be able to review it.
 
     strategy:
       fail-fast: false
@@ -47,20 +36,30 @@ jobs:
           browser: ${{ matrix.browser }}
           command: npm run test:component:ci
           working-directory: ui
+          tag: ${{ github.event_name }} # Tag will be either "push" or "pull_request"
           record: true
         env:
-          CYPRESS_PROJECT_ID: "5zr217" # Cypress dashboard project ID
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }} # Dashboard record key as an environment variable        
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # To allow accurately detecting a build vs a re-run build
+          COMMIT_INFO_MESSAGE: ${{ github.event.pull_request.title }} # Either PR title or default information
 
       - name: Add workflow summary
+        env:
+          SUMMARY: |
+            Hi @${{ github.event.pull_request.user.login }} and thanks for the contribution! 👏
+
+            We've detected file changes inside the `ui` folder, so that triggered our Cypress component tests.
         run: echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
         if: always()
           
       - name: Output failure message
+        env: 
+          FAILURE: ":bangbang: Seems like some of the tests are failing. Please amend 'em for someone from the team to be able to review it."
         run: echo "$FAILURE" >> $GITHUB_STEP_SUMMARY
         if: failure() || cancelled()
 
       - name: Output success message
+        env: 
+          SUCCESS: ":white_check_mark: Seems like all the tests passed successfully, so your PR is ready to be reviewed!"
         run: echo "$SUCCESS" >> $GITHUB_STEP_SUMMARY
         if: success()
