test: Trying out test parallelization

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -37,7 +37,9 @@ jobs:
           command: npm run test:component:ci
           working-directory: ui
           tag: ${{ github.event_name }} # Tag will be either "push" or "pull_request"
-          record: true
+          record: "true"
+          parallel: "true"
+          group: Tests in ${{ matrix.browser }} browser
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }} # Dashboard record key as an environment variable        
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # To allow accurately detecting a build vs a re-run build
