--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -1,7 +1,7 @@
 name: UI Tests
 
 on:
-  pull_request:
+  pull_request_target:
     types: [opened, edited, synchronize ]
     branches:    
       - 'dev'
