refactor: Fine tuning the scenarios when the workflow will run

--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -2,11 +2,12 @@ name: UI Tests
 
 on:
   pull_request_target:
-    types: [opened, edited, synchronize ]
+    types: [opened, synchronize ]
     branches:    
       - 'dev'
     paths:
-      - 'ui/**'
+      - 'ui/**.js'
+      - '!.github/**'
 
 jobs:
   tests:      
