--- a/.github/workflows/tests-on-pr.yml
+++ b/.github/workflows/tests-on-pr.yml
@@ -1,12 +1,13 @@
 name: UI Tests
 
 on:
-  pull_request:
-    types: [opened, edited, synchronize ]
+  pull_request_target:
+    types: [opened, synchronize ]
     branches:    
       - 'dev'
     paths:
-      - 'ui/**'
+      - 'ui/**.js'
+      - '!.github/**'
 
 jobs:
   tests:      
