--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -93,7 +93,8 @@
     "typescript": "~4.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "workbox-build": "^6.5.3"
   },
   "peerDependencies": {
     "electron-builder": "^22.0.0",
