--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -104,7 +104,8 @@
     "quasar": "^2.6.0",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "workbox-build": "^6.5.0"
   },
   "peerDependenciesMeta": {
     "electron-builder": {
@@ -120,6 +121,9 @@
       "optional": true
     },
     "vuex": {
+      "optional": true
+    },
+    "workbox-build": {
       "optional": true
     }
   },
