chore(app-vite): Supress missing rollup peer dep PNPM It's annoying to use rollup as a separate dep when it's deeply related to Vite. Adding this supress the warning on both apps that are using app-vite, and app-vite itself.

--- a/app-vite/package.json
+++ b/app-vite/package.json
@@ -113,6 +113,13 @@
     "npm": ">= 6.14.12",
     "yarn": ">= 1.17.3"
   },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "rollup"
+      ]
+    }
+  },
   "volta": {
     "node": "lts"
   },
